--- a/articles/Patent/1.md
+++ b/articles/Patent/1.md
@@ -1,7 +1,7 @@
 ---
 title: 我的专利集--封面
 date: 2022-06-11
-cover: https://github.com/SpiritGit/SpiritGit.github.io/raw/main/src/images/covers/aps.webp
+cover: https://github.com/SpiritGit/SpiritGit.github.io/raw/main/src/images/covers/patent.jpg
 ---
 
 具体见左侧导航栏 -- 发明专利
